Movies app ASP.NET

--- a/ASPRazorMovies/appsettings.json
+++ b/ASPRazorMovies/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ASPRazorMoviesContext": "Server=(localdb)\\mssqllocaldb;Database=ASPRazorMoviesContext-f4a45a3e-cb1c-4689-a035-2b525c5f27c2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
